[package]
name = "womilliam"
version = "0.1.0"
authors = ["Kevin Johnson <kevinstuartjohnson@gmail.com>"]

[dependencies]
tokio = "0.1"
tokio-io = "0.1"
futures = "0.1"
bytes = "0.4"
clap = "~2.32"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
fern = "0.5"
chrono = "0.4"
